[metadata]
name = torch-mixture-katies
version = 0.0.3
author = Katie Spivakovsky
author_email = kspivakovsky@gmail.com
description = Fitting mixture models with EM implemented in pytorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/katie-sp/torch_mixture
project_urls =
    Bug Tracker = https://github.com/katie-sp/torch_mixture/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
	torch	
	numpy
	sklearn

[options.packages.find]
where = src

